--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                         <a href="index.html">Главная</a>
                       </li>
                       <li class="has-children">
-                        <a href="rooms.html">123</a>
+                        <a href="rooms.html">Комнаты</a>
                         <ul class="dropdown arrow-top">
-                          <li><a href="rooms.html">1</a></li>
-                          <li><a href="rooms.html">2</a></li>
-                          <li><a href="rooms.html">3</a></li>
+                          <li><a href="rooms.html">Комната 1</a></li>
+                          <li><a href="rooms.html">Комната 2</a></li>
+                          <li><a href="rooms.html">Комната 3</a></li>
                           <li class="has-children">
                             <a href="rooms.html">1234</a>
                             <ul class="dropdown">
