--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                           <li><a href="rooms.html">Комната 2</a></li>
                           <li><a href="rooms.html">Комната 3</a></li>
                           <li class="has-children">
-                            <a href="rooms.html">1234</a>
+                            <a href="rooms.html">Комфорт</a>
                             <ul class="dropdown">
-                              <li><a href="rooms.html">12</a></li>
-                              <li><a href="rooms.html">2221</a></li>
-                              <li><a href="rooms.html">321</a></li>
-                              <li><a href="rooms.html">2324</a></li>
+                              <li><a href="rooms.html">с микроволновкой</a></li>
+                              <li><a href="rooms.html">с холодильником</a></li>
+                              <li><a href="rooms.html">микроволновка+холодильник</a></li>
+                              <li><a href="rooms.html">еще что то</a></li>
                               
                             </ul>
                           </li>
