--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5 our-yard">
+          <div class="col-md-6 col-lg-4 mb-5">
             <div class="hotel-room text-center">
               <a href="#" class="d-block mb-0 thumbnail"><img src="images/slider/dvor/2.jpg" alt="Image" class="img-fluid"></a>
               <div class="hotel-room-body">
@@ -147,16 +147,16 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-5 our-yard">
+          <div class="col-md-6 col-lg-4 mb-5">
             <div class="hotel-room text-center">
               <a href="#" class="d-block mb-0 thumbnail"><img src="images/slider/dvor/1.jpg" alt="Image" class="img-fluid"></a>
-              <!-- <div class="hotel-room-body">
+              <div class="hotel-room-body">
                 <h3 class="heading mb-0"><a href="#">Family Room</a></h3>
                 <strong class="price">$400.00 / per night</strong>
-              </div> -->
+              </div>
             </div>
           </div>
-         <!--  <div class="col-md-6 col-lg-4 mb-5 our-yard">
+          <div class="col-md-6 col-lg-4 mb-5">
             <div class="hotel-room text-center">
               <a href="#" class="d-block mb-0 thumbnail"><img src="images/slider/dvor/4.jpg" alt="Image" class="img-fluid"></a>
               <div class="hotel-room-body">
@@ -166,7 +166,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 mb-5 our-yard">
+          <div class="col-md-6 col-lg-4 mb-5">
             <div class="hotel-room text-center">
               <a href="#" class="d-block mb-0 thumbnail"><img src="images/slider/dvor/5.jpg" alt="Image" class="img-fluid"></a>
               <div class="hotel-room-body">
@@ -175,7 +175,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-5 our-yard">
+          <div class="col-md-6 col-lg-4 mb-5">
             <div class="hotel-room text-center">
               <a href="#" class="d-block mb-0 thumbnail"><img src="images/slider/dvor/6.jpg" alt="Image" class="img-fluid"></a>
               <div class="hotel-room-body">
@@ -190,9 +190,9 @@
               <div class="hotel-room-body">
                 <h3 class="heading mb-0"><a href="#">Single Room</a></h3>
                 <strong class="price">$155.00 / per night</strong>
-              </div> -->
+              </div>
             </div>
-          </div>
+          </div> 
         </div>
       </div>
     </div>
