--- a/index.html
+++ b/index.html
@@ -278,15 +278,38 @@
         </div>
       </div>
     </div> 
+    <div class="row align_items-center">
+      <div class="col-md-6 col-lg-4 mb-5">
+        <div class="hotel-room text-center">
+          <a href="#" class="d-block mb-0 thumbnail"><img src="images/room/su8..jpg" alt="Image" class="img-fluid yard-img-height"></a>
+          <div class="hotel-room-body">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-5">
+        <div class="hotel-room text-center">
+          <a href="#" class="d-block mb-0 thumbnail"><img src="images/room/9nom.jpg" alt="Image" class="img-fluid yard-img-height"></a>
+          <div class="hotel-room-body">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-5">
+        <div class="hotel-room text-center">
+          <a href="#" class="d-block mb-0 thumbnail"><img src="images/room/su8.jpg" alt="Image" class="img-fluid yard-img-height"></a>
+          <div class="hotel-room-body">
+          </div>
+        </div>
+      </div>
+    </div> 
     </div>  
-    
   </div>  
 </div>
 </div>
 
 
 
-<div class="site-section">
+<!-- <div class="site-section">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 mb-5 mb-md-0">
@@ -399,13 +422,13 @@
     </div>
 
   </div>
-</div>
+</div> -->
 
 <div class="site-section">
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-        <h2 class="mb-5">Our Gallery</h2>
+        <h2 class="mb-5">Красоты Анапы</h2>
       </div>
     </div>
     <div class="row no-gutters">
@@ -438,192 +461,6 @@
     </div>
   </div>
 </div>
-
-
-
-<div class="site-section block-15">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-        <h2>Upcoming Events</h2>
-      </div>
-    </div>
-
-
-    <div class="nonloop-block-15 owl-carousel">
-
-
-      <div class="media-with-text p-md-5">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_1.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_2.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_3.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_1.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_2.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_3.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_1.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_2.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-      <div class="media-with-text p-md-4">
-        <div class="img-border-sm mb-4">
-          <a href="#" class="popup-vimeo image-play">
-            <img src="images/img_3.jpg" alt="" class="img-fluid">
-          </a>
-        </div>
-        <h2 class="heading mb-0"><a href="#">Lorem Ipsum Dolor Sit Amet</a></h2>
-        <span class="mb-3 d-block post-date">Dec 20th, 2018 &bullet; By <a href="#">Admin</a></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores culpa qui aliquam placeat nobis veritatis tempora natus rerum obcaecati.</p>
-      </div>
-
-
-
-    </div>
-
-  </div>
-</div>
-
-
-<div class="site-section block-14 bg-light">
-
-  <div class="container">
-
-    <div class="row">
-      <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-        <h2>What People Say</h2>
-      </div>
-    </div>
-
-    <div class="nonloop-block-14 owl-carousel">
-
-      <div class="p-4">
-        <div class="d-flex block-testimony">
-          <div class="person mr-3">
-            <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded">
-          </div>
-          <div>
-            <h2 class="h5">Katie Johnson</h2>
-            <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
-          </div>
-        </div>
-      </div>
-      <div class="p-4">
-        <div class="d-flex block-testimony">
-          <div class="person mr-3">
-            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded">
-          </div>
-          <div>
-            <h2 class="h5">Jane Mars</h2>
-            <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
-          </div>
-        </div>
-      </div>
-      <div class="p-4">
-        <div class="d-flex block-testimony">
-          <div class="person mr-3">
-            <img src="images/person_3.jpg" alt="Image" class="img-fluid rounded">
-          </div>
-          <div>
-            <h2 class="h5">Shane Holmes</h2>
-            <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
-          </div>
-        </div>
-      </div>
-      <div class="p-4">
-        <div class="d-flex block-testimony">
-          <div class="person mr-3">
-            <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded">
-          </div>
-          <div>
-            <h2 class="h5">Mark Johnson</h2>
-            <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-</div>
-
-
 <div class="py-5 quick-contact-info">
   <div class="container">
     <div class="row">
