--- a/index.html
+++ b/index.html
@@ -433,29 +433,28 @@
     </div>
     <div class="row no-gutters">
       <div class="col-md-6 col-lg-3">
-        <a href="images/img_1.jpg" class="image-popup img-opacity"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
+        <a href="images/city/1.jpg" class="image-popup img-opacity"><img src="images/city/1.jpg" alt="Image" class="img-fluid"></a>
       </div>
       <div class="col-md-6 col-lg-3">
-        <a href="images/img_2.jpg" class="image-popup img-opacity"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
+        <a href="images/city/2.jpg" class="image-popup img-opacity"><img src="images/city/2.jpg" alt="Image" class="img-fluid"></a>
       </div>
       <div class="col-md-6 col-lg-3">
-        <a href="images/img_3.jpg" class="image-popup img-opacity"><img src="images/img_3.jpg" alt="Image" class="img-fluid"></a>
+        <a href="images/city/3.jpg" class="image-popup img-opacity"><img src="images/city/3.jpg" alt="Image" class="img-fluid"></a>
       </div>
       <div class="col-md-6 col-lg-3">
-        <a href="images/img_4.jpg" class="image-popup img-opacity"><img src="images/img_4.jpg" alt="Image" class="img-fluid"></a>
-      </div>
-
-      <div class="col-md-6 col-lg-3">
-        <a href="images/img_4.jpg" class="image-popup img-opacity"><img src="images/img_4.jpg" alt="Image" class="img-fluid"></a>
+        <a href="images/city/4.jpg" class="image-popup img-opacity"><img src="images/city/4.jpg" alt="Image" class="img-fluid"></a>
       </div>
       <div class="col-md-6 col-lg-3">
-        <a href="images/img_5.jpg" class="image-popup img-opacity"><img src="images/img_5.jpg" alt="Image" class="img-fluid"></a>
+        <a href="images/city/5.jpg" class="image-popup img-opacity"><img src="images/city/5.jpg" alt="Image" class="img-fluid"></a>
       </div>
       <div class="col-md-6 col-lg-3">
-        <a href="images/img_6.jpg" class="image-popup img-opacity"><img src="images/img_6.jpg" alt="Image" class="img-fluid"></a>
+        <a href="images/city/6.jpg" class="image-popup img-opacity"><img src="images/city/6.jpg" alt="Image" class="img-fluid"></a>
       </div>
       <div class="col-md-6 col-lg-3">
-        <a href="images/img_7.jpg" class="image-popup img-opacity"><img src="images/img_7.jpg" alt="Image" class="img-fluid"></a>
+        <a href="images/city/7.jpg" class="image-popup img-opacity"><img src="images/city/7.jpg" alt="Image" class="img-fluid"></a>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <a href="images/city/8.jpg" class="image-popup img-opacity"><img src="images/city/8.jpg" alt="Image" class="img-fluid"></a>
       </div>
 
     </div>
