--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                           <li><a href="#yard">Наш двор</a></li>
                           <li><a href="#2nd-floor">2 этаж</a></li>
                           <li><a href="#rooms">Апартаменты</a></li>
-                          <li><a href="kitchen">Кухня</a></li>
+                          <li><a href="#kitchen">Кухня</a></li>
                           <li><a href="">Домик</a></li>
                         </ul>
                       </li>
