--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="Description" content="Город-курорт Анапа. Сайт гостиници Вега."/>
  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <!--[if IE]>
+   <!--[if IE]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Work+Sans:300,400,700" rel="stylesheet">
@@ -62,10 +62,10 @@
                     <div class="d-inline-block d-lg-none  ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu h3"></span></a></div>
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li class="active">
-                        <a href="index.html">Главная</a>
+                        <a href="/">Главная</a>
                       </li>
                       <li class="has-children">
-                        <a href="">Фото</a>
+                        <a>Фото</a>
                         <ul class="dropdown arrow-top">
                           <li><a href="#yard">Наш двор</a></li>
                           <li><a href="#2nd-floor">2 этаж</a></li>
@@ -105,7 +105,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center" data-aos="fade">
-              <h1 class="mb-2">Климат Анапы, курорта средиземноморского типа, </h1>
+              <h1 class="mb-2">Климат курорта Анапы, средиземноморского типа,</h1>
               <h2 class="caption">умеренно влажный и теплый.</h2>
             </div>
           </div>
@@ -531,7 +531,7 @@
   <script src="js/main.js"></script>
 
 
-    <!-- <script>
+   <script>
       document.addEventListener('DOMContentLoaded', function() {
         var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
 
@@ -548,15 +548,7 @@
           });
         }
       });
-    </script> -->
-    <script type="text/javascript">
-      $(function(){
-        $("a[href^='#']").click(function(){
-          var _href = $(this).attr("href");
-          $("html, body").animate({scrollTop: $(_href).offset().top+"px"});
-          return false;
-        });
-      });
-    </script>
+    </script> 
+    
   </body>
   </html>
