--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
   <script src="js/main.js"></script>
 
 
-   <script>
+   <!-- <script>
       document.addEventListener('DOMContentLoaded', function() {
         var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
 
@@ -548,7 +548,7 @@
           });
         }
       });
-    </script> 
+    </script>  -->
     
   </body>
   </html>
