--- a/index.html
+++ b/index.html
@@ -57,27 +57,18 @@
               </div>
               <div class="col-10">
                 <nav class="site-navigation text-right" role="navigation">
-                  <div class="container">
-
-                    <div class="d-inline-block d-lg-none  ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu h3"></span></a></div>
-                    <ul class="site-menu js-clone-nav d-none d-lg-block">
-                      <li class="active">
-                        <a href="/">Главная</a>
-                      </li>
-                      <li class="has-children">
-                        <a>Фото</a>
-                        <ul class="dropdown arrow-top">
-                          <li><a href="#yard">Наш двор</a></li>
-                          <li><a href="#2nd-floor">2 этаж</a></li>
-                          <li><a href="#rooms">Апартаменты</a></li>
-                          <li><a href="#kitchen">Кухня</a></li>
-                          <li><a href="">Домик</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="#anapa-img">Красоты Анапы</a></li>
-                      <li><a href="#contacts">Контакты</a></li>
-
-                    </ul>
+               <div class="menu-block">
+                    <nav class="menu-nav">
+                      <a class="menu-nav__link" href="/">Главная</a>
+                      <a class="menu-nav__link" href="#yard">Наш двор</a>
+                      <a class="menu-nav__link" href="#rooms">Апартаменты</a>
+                      <a class="menu-nav__link" href="#kitchen">Кухня</a>
+                      <a class="menu-nav__link" href="#anapa-img">Красоты Анапы</a>
+                      <a class="menu-nav__link" href="#contacts">Контакты</a>
+                    </nav>
+                    <a href="#" class="menu-btn">
+                      <span></span>
+                    </a>
                   </div>
                 </nav>
               </div>
