--- a/index.html
+++ b/index.html
@@ -515,6 +515,8 @@
   <script src="js/mediaelement-and-player.min.js"></script>
 
   <script src="js/main.js"></script>
+  <script src="js/transform.js"></script>
+
 
 
    <!-- <script>
