--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       <a class="menu-nav__link" href="#anapa-img">Красоты Анапы</a>
                       <a class="menu-nav__link" href="#contacts">Контакты</a>
                     </nav>
-                    <a href="#" class="menu-btn">
+                    <a class="menu-btn">
                       <span></span>
                     </a>
                   </div>
