--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Гостиница Вега</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="Description" content="Город-курорт Анапа. Сайт гостиници Вега."/>
+  <meta name="Description" content="Город-курорт Анапа. Сайт гостиницы Вега."/>
  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
    <!--[if IE]>
@@ -82,7 +82,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center" data-aos="fade">
-              <h1 class="mb-2">Добро пожаловать на сайт гостиници Вега.</h1>
+              <h1 class="mb-2">Добро пожаловать на сайт гостиницы Вега.</h1>
               <h2 class="caption">Город-курорт Анапа.</h2>
             </div>
           </div>
