--- a/index.html
+++ b/index.html
@@ -160,8 +160,15 @@
               </div>
             </div>
           </div> 
+          <div class="col-md-6 col-lg-4 mb-5">
+            <div class="hotel-room text-center">
+              <img data-src="images/yard/123.jpg" alt="Image" class="img-fluid yard-img-height">
+              <div class="hotel-room-body">
+              </div>
+            </div>
+          </div> 
         </div>
-        Гостевой дом Вега размещен по адресу ул. Новороссийская, 5 в Анапе в 12 минутах ходьбы от центра.Поблизости вы можете посетить такие достопримечательности как Русские ворота и Аквапарк Золотой пляж.
+        Гостевой дом Вега размещен по адресу ул. Новороссийская, 5 в Анапе в 12 минутах ходьбы от центра. Поблизости вы можете посетить такие достопримечательности как Русские ворота и Аквапарк Золотой пляж.
       </div>
       <div class="container" id="2nd-floor">
         <div class="row">
