--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
               <div class="col-10">
                 <nav class="site-navigation text-right" role="navigation">
                <div class="menu-block">
+
                     <nav class="menu-nav">
                       <a class="menu-nav__link" href="/">Главная</a>
                       <a class="menu-nav__link" href="#yard">Наш двор</a>
@@ -66,7 +67,9 @@
                       <a class="menu-nav__link" href="#anapa-img">Красоты Анапы</a>
                       <a class="menu-nav__link" href="#contacts">Контакты</a>
                     </nav>
+                    <div class="menu white">Меню</div>
                     <a class="menu-btn">
+
                       <span></span>
                     </a>
                   </div>
@@ -168,7 +171,7 @@
             </div>
           </div> 
         </div>
-        Гостевой дом Вега размещен по адресу ул. Новороссийская, 5 в Анапе в 12 минутах ходьбы от центра. Поблизости вы можете посетить такие достопримечательности как Русские ворота и Аквапарк Золотой пляж.
+        <div class="text-centr">Гостевой дом Вега размещен по адресу ул. Новороссийская, 5 в Анапе в 12 минутах ходьбы от центра. Поблизости вы можете посетить такие достопримечательности как Русские ворота и Аквапарк Золотой пляж.</div>
       </div>
       <div class="container" id="2nd-floor">
         <div class="row">
@@ -209,7 +212,7 @@
             </div>
           </div>
         </div> 
-        На территории действуют следующие услуги: библиотека, удобный трансфер от/до аэропорта, кухня, интернет.
+        <div class="text-centr">На территории действуют следующие услуги: библиотека, удобный трансфер от/до аэропорта, кухня, интернет.</div>
       </div>
       
     </div>
@@ -291,7 +294,7 @@
           </div>
         </div>
       </div>
-      Для размещения гостей предлагается 11 номеров в таких категориях: четырехместный, трехместный, двухместный номер с 2 отдельными кроватями, двухместный номер с 1 кроватью.В объекте размещения предусмотрены такие удобства: кондиционер, терраса, обеденная зона, мебель на улице, гладильные принадлежности, электрический чайник, фен.
+      <div class="text-centr">Для размещения гостей предлагается 11 номеров в таких категориях: четырехместный, трехместный, двухместный номер с 2 отдельными кроватями, двухместный номер с 1 кроватью.В объекте размещения предусмотрены такие удобства: кондиционер, терраса, обеденная зона, мебель на улице, гладильные принадлежности, электрический чайник, фен.</div>
     </div>
     <div class="container" id="kitchen">
       <div class="row">
@@ -456,7 +459,7 @@
     <div class="row">
       <div class="col-md-6 mx-auto text-center mb-5 section-heading">
         <h2 class="mb-5">Красоты Анапы</h2>
-        <p>До центра города: 7.4 км, аэропорта: 6.6 км, ж/д вокзала: 2.4 км, Черного моря: 488 м, пляжа: 4.1 км</p>
+        <div class="text-centr">До центра города: 7.4 км, аэропорта: 6.6 км, ж/д вокзала: 2.4 км, Черного моря: 488 м, пляжа: 4.1 км</div>
       </div>
     </div>
     <div class="row no-gutters">
