--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       </div>
     </div>
     <div class="text-centr">Для размещения гостей предлагается 11 номеров в таких категориях: четырехместный, трехместный, двухместный номер с 2 отдельными кроватями, двухместный номер с 1 кроватью.В объекте размещения предусмотрены такие удобства: кондиционер, терраса, обеденная зона, мебель на улице, гладильные принадлежности, электрический чайник, фен.<p><b>Бронирование.</b>
-Мы не требуем от вас присылать "задаток" или оплачивать стоимость проживания заранее. Если вы собрались отдохнуть в Анапе, то просто позвоните по телефону и забронируйте для себя номер.</p></div>
+Мы не требуем от вас присылать "задаток" или оплачивать стоимость проживания заранее. Если вы собрались отдохнуть в Анапе, то просто позвоните по <a href="#contacts">телефону</a> и забронируйте для себя номер.</p></div>
   </div>
   <div class="container" id="kitchen">
     <div class="row">
