--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="Description" content="Город-курорт Анапа.Гостиницы Вега недалеко от моря. "/>
   <meta name="yandex-verification" content="fb9c20deb9fbd9f1" />
+  <meta name="google-site-verification" content="SW_ktdnv7AkULaieGITjyHdDwDawaRBs3lhjaLL6dno" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
    <!--[if IE]>
