--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="col-10">
                 <nav class="site-navigation text-right" role="navigation">
                  <div class="menu-block">
-
+<span class="menu-block__phone">8-918-385-77-67</span>
                   <nav class="menu-nav">
                     <a class="menu-nav__link" href="/">Главная</a>
                     <a class="menu-nav__link" href="#yard">Наш двор</a>
@@ -87,6 +87,7 @@
                   <a class="menu-btn">
                     <span></span>
                   </a>
+
                 </div>
               </nav>
             </div>
@@ -94,7 +95,9 @@
         </div>
       </div>
     </div>
+
   </div>
+
   <div class="slide-one-item home-slider owl-carousel">
     <div class="site-blocks-cover overlay" style="background-image: url(images/anapa1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
