--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           <div class="py-1">
             <div class="row align-items-center">
               <div class="col-2">
-                <img class="site-navbar-logo" src="images/logo.jpg" alt="Гостиница Вега">
+                <img class="site-navbar-logo" src="images/logo-phone.jpg" alt="Гостиница Вега"/>
               </div>
               <div class="col-10">
                 <nav class="site-navigation text-right" role="navigation">
                  <div class="menu-block">
-<span class="menu-block__phone">8-918-385-77-67</span>
+
                   <nav class="menu-nav">
                     <a class="menu-nav__link" href="/">Главная</a>
                     <a class="menu-nav__link" href="#yard">Наш двор</a>
