--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           </div>
         </div>
       </div>
+    <div class="header-phone">Стоимость номеров от 1000 руб./сутки<br/> или 400 руб. с человека. Подробности по телефону: 8-918-385-77-67</div>
     </div>
 
   </div>
@@ -103,7 +104,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-7 text-center" data-aos="fade">
-            <h1 class="mb-2">Добро пожаловать на сайт гостиницы Вега.</h1>
+            <h1 class="mb-2 container__top">Добро пожаловать на сайт гостиницы Вега.</h1>
             <h2 class="caption">Город-курорт Анапа.</h2>
           </div>
         </div>
@@ -113,7 +114,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-7 text-center" data-aos="fade">
-            <h1 class="mb-2">Климат курорта Анапы, средиземноморского типа,</h1>
+            <h1 class="mb-2 container__top">Климат курорта Анапы, средиземноморского типа,</h1>
             <h2 class="caption">умеренно влажный и теплый.</h2>
           </div>
         </div>
@@ -123,7 +124,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-7 text-center" data-aos="fade">
-            <h1 class="mb-2">Анапа – один из самых солнечных курортов всего Черноморья.</h1>
+            <h1 class="mb-2 container__top">Анапа – один из самых солнечных курортов всего Черноморья.</h1>
             <h2 class="caption">Морские бризы постоянно увлажняют воздух и создают прохладу в летний период.</h2>
           </div>
         </div>
