--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
       </div>
-    <div class="header-phone">Стоимость номеров от 1000 руб./сутки<br/> или 400 руб. с человека. Подробности по телефону: 8-918-385-77-67</div>
+      <div class="header-phone">Стоимость номеров от 1000 руб./сутки<br/> или 400 руб. с человека. Подробности по телефону: 8-918-385-77-67</div>
     </div>
 
   </div>
@@ -314,45 +314,45 @@
       </div>
     </div>
     <div class="text-centr">Для размещения гостей предлагается 11 номеров в таких категориях: четырехместный, трехместный, двухместный номер с 2 отдельными кроватями, двухместный номер с 1 кроватью.В объекте размещения предусмотрены такие удобства: кондиционер, терраса, обеденная зона, мебель на улице, гладильные принадлежности, электрический чайник, фен.<p><b>Бронирование.</b>
-Мы не требуем от вас присылать "задаток" или оплачивать стоимость проживания заранее. Если вы собрались отдохнуть в Анапе, то просто позвоните по <a href="#contacts">телефону</a> и забронируйте для себя номер.</p></div>
-  </div>
-  <div class="container" id="kitchen">
-    <div class="row">
-      <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-        <h2 class="mb-5">Кухня</h2>
-      </div>
+      Мы не требуем от вас присылать "задаток" или оплачивать стоимость проживания заранее. Если вы собрались отдохнуть в Анапе, то просто позвоните по <a href="#contacts">телефону</a> и забронируйте для себя номер.</p></div>
     </div>
-    <div class="row align_items-center">
-      <div class="col-md-6 col-lg-4 mb-5">
-        <div class="hotel-room text-center">
-          <img data-src="images/kitchen/1.jpeg" alt="Image" class="img-fluid yard-img-height">
-          <div class="hotel-room-body">
+    <div class="container" id="kitchen">
+      <div class="row">
+        <div class="col-md-6 mx-auto text-center mb-5 section-heading">
+          <h2 class="mb-5">Кухня</h2>
+        </div>
+      </div>
+      <div class="row align_items-center">
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="hotel-room text-center">
+            <img data-src="images/kitchen/1.jpeg" alt="Image" class="img-fluid yard-img-height">
+            <div class="hotel-room-body">
 
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6 col-lg-4 mb-5">
-        <div class="hotel-room text-center">
-          <img data-src="images/kitchen/2.jpg" alt="Image" class="img-fluid yard-img-height">
-          <div class="hotel-room-body">
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="hotel-room text-center">
+            <img data-src="images/kitchen/2.jpg" alt="Image" class="img-fluid yard-img-height">
+            <div class="hotel-room-body">
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6 col-lg-4 mb-5">
-        <div class="hotel-room text-center">
-          <img data-src="images/kitchen/3.jpg" alt="Image" class="img-fluid yard-img-height">
-          <div class="hotel-room-body">
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="hotel-room text-center">
+            <img data-src="images/kitchen/3.jpg" alt="Image" class="img-fluid yard-img-height">
+            <div class="hotel-room-body">
+            </div>
           </div>
         </div>
-      </div>
+      </div> 
+      
+
+
+
     </div> 
-    
 
-
-
-  </div> 
-
-</div>   
+  </div>   
 </div>  
 </div>
 </div>
@@ -511,21 +511,28 @@
     </div>
   </div>
 </div>
-<div class="py-5 quick-contact-info" id="contacts">
-  <div class="container">
-    <div class="row align_items-center">
-      <div class="col-md-4 text-center">
-        <div>
-          <span class="icon-room text-white h2 d-block"></span>
-          <span class="contact white">Адрес:</span>
-          <p class="mb-0 contact white">Краснодарский край,<br>город-курорт Анапа,<br>ул. Новороссийская 5.</p>
-          <span class="phone white">Тел: 8-918-385-77-67 Вера.</span>
+
+<footer>
+  <div class="contacts">
+    <div class="py-5 quick-contact-info">
+      <div class="container">
+        <div class="row align_items-center">
+          <div class="text-center">
+            <div>
+              <span class="icon-room text-white h2 d-block"></span>
+              <span class="contact white">Адрес:</span>
+              <p class="mb-0 contact white">Краснодарский край,<br>город-курорт Анапа,<br>ул. Новороссийская 5.</p>
+              <span class="phone white">Тел: 8-918-385-77-67 Вера.</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <div class="map__contacts">
+      <iframe src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=1139237768" width="320" height="300" frameborder="0"></iframe>
+    </div>
   </div>
-</div>
-<footer>
+
   <div class="footer__copyright">
    <hr class="footer__hr">
    © 2013 - 2019 «Гостиница Вега». Все права защищены.
