--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <div class="text-centr">До центра города: 7.4 км, аэропорта: 6.6 км, ж/д вокзала: 2.4 км, Черного моря: 488 м, пляжа: 4.1 км</div>
       </div>
     </div>
-    <div class="row no-gutters">
+    <div class="row no-gutters text-centr">
       <div class="col-md-6 col-lg-3">
         <a href="images/city/1.jpg" class="image-popup img-opacity"><img data-src="images/city/1.jpg" alt="Image" class="img-fluid"></a>
       </div>
