--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   </div>
 </div>
 <footer>
-  <div class="contacts">
+  <div class="contacts" id="contacts">
     <div class="py-5 quick-contact-info">
       <div class="container">
         <div class="row align_items-center">
